src/test/resources/rules/success/MethodName.java
package rules.success;

public class MethodName {
    public void goodMethod() {}
}